created sidebar and footer

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -2,14 +2,14 @@
   position: relative;
   width: 100vw;
   height: 100vh;
-
+  align-items: center;
   background: black;
 }
 .home {
   position: relative;
   left: 50px;
   width: 1280px;
-  height: 750px;
+  height: 832px;
   top: 5px;
 
   background: #1d2123;
@@ -19,7 +19,7 @@
   position: absolute;
   width: 1122px;
   height: 73px;
-  left: 96px;
+  left: 98px;
   top: 0px;
   border-radius: 5px;
 
@@ -42,16 +42,57 @@
   /* identical to box height */
 
   color: rgba(255, 255, 255, 0.25);
-
-  /* Inside auto layout */
-
-  /* flex: none;
-  order: 1;
-  flex-grow: 0; */
 }
 .search {
   position: absolute;
   left: 39px;
   top: 30px;
   color: rgba(255, 255, 255, 0.25);
+}
+.sidebar {
+  left: 0px;
+  top: 0px;
+  height: 100vh;
+  width: 98px;
+  background-color: inherit;
+}
+.logo {
+  position: absolute;
+  width: 34px;
+  height: 34px;
+  left: 27px;
+  top: 23px;
+}
+.side_parent {
+  position: absolute;
+  width: 52px;
+  height: 230px;
+  left: 20px;
+  top: 96px;
+
+  /* dark-alt */
+
+  background: #1a1e1f;
+  border-radius: 32px;
+}
+.side_personal {
+  position: absolute;
+  width: 52px;
+  height: 127px;
+  left: 20px;
+  top: 346px;
+
+  /* dark-alt */
+
+  background: #1a1e1f;
+  border-radius: 32px;
+}
+.footer {
+  position: absolute;
+  width: 1292px;
+  height: 125px;
+  left: -5px;
+  top: 652px;
+  background-color: inherit;
+  filter: drop-shadow(0px -25px 100px rgba(16, 16, 16, 0.51));
 }
