--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -72,7 +72,7 @@
 
   /* dark-alt */
 
-  background: #1a1e1f;
+  background: #090a0a;
   border-radius: 32px;
 }
 .side_personal {
@@ -84,7 +84,7 @@
 
   /* dark-alt */
 
-  background: #1a1e1f;
+  background: #090a0a;
   border-radius: 32px;
 }
 .footer {
@@ -95,4 +95,16 @@
   top: 652px;
   background-color: inherit;
   filter: drop-shadow(0px -25px 100px rgba(16, 16, 16, 0.51));
+}
+.smenu {
+  position: absolute;
+  left: 38.27;
+  top: 26.83;
+
+  /* secondary */
+
+  background: #facd66;
+  /* navicon-active-shadow */
+
+  box-shadow: 0px 0px 11px rgba(250, 205, 102, 0.25);
 }
