--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,12 +7,11 @@
 }
 .home {
   position: relative;
-  left: 50px;
+  left: 300px;
   width: 1280px;
-  height: 832px;
-  top: 5px;
-
-  background: #1d2123;
+  height: 100vh;
+  
+  background: #1D2123;;
 }
 
 .nav {
@@ -92,7 +91,7 @@
   width: 1292px;
   height: 125px;
   left: -5px;
-  top: 652px;
+  top: 852px;
   background-color: inherit;
   filter: drop-shadow(0px -25px 100px rgba(16, 16, 16, 0.51));
 }
