--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,11 +7,11 @@
 }
 .home {
   position: relative;
-  left: 300px;
+  left: 50px;
   width: 1280px;
   height: 100vh;
-  
-  background: #1D2123;;
+
+  background: #1d2123;
 }
 
 .nav {
@@ -88,10 +88,11 @@
 }
 .footer {
   position: absolute;
-  width: 1292px;
+  width: inherit;
   height: 125px;
-  left: -5px;
-  top: 852px;
+  /* left: -5px; */
+  /* top: 852px; */
+  bottom: 0px;
   background-color: inherit;
   filter: drop-shadow(0px -25px 100px rgba(16, 16, 16, 0.51));
 }
