--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -100,11 +100,26 @@
   position: absolute;
   left: 38.27;
   top: 26.83;
-
+  outline: none;
   /* secondary */
 
-  background: #facd66;
+  /* background: #facd66; */
+  justify-self: start;
   /* navicon-active-shadow */
 
-  box-shadow: 0px 0px 11px rgba(250, 205, 102, 0.25);
+  /* box-shadow: 0px 0px 11px rgba(250, 205, 102, 0.25); */
+}
+.icon {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  width: 22px;
+  height: 22px;
+  left: 50%;
+  transform: translateY(-50%);
+  transform: translateX(-50%);
+  top: 20px;
+  margin-top: 20px;
+  /* padding-top: 7px; */
+  /* background: #c4c0c0; */
 }
