--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -193,8 +193,8 @@
   position: absolute;
   width: 59px;
   height: 17px;
-  left: 153px;
-  top: 313px;
+  left: 99px;
+  top: 0px;
   /* Regular/14px */
 
   font-family: 'Quicksand';
@@ -205,6 +205,13 @@
   /* identical to box height, or 17px */
 
   color: #ffffff;
+}
+.heartlike {
+  position: absolute;
+  left: 76.33px;
+  top: 3.67px;
+  cursor: pointer;
+  /* background: #ffffff; */
 }
 .esma {
   position: absolute;
@@ -239,7 +246,6 @@
   height: 356px;
   left: 800px;
   top: 139px;
-  overflow: hidden;
   background: inherit;
 }
 .hmusic {
@@ -412,3 +418,31 @@
   line-height: 15px;
   color: white;
 }
+.likescontainer {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  /* padding: 0px; */
+  background: inherit;
+  width: 158px;
+  top: 312px;
+  left: 54px;
+  height: 20px;
+}
+.phot {
+  position: absolute;
+  display: flex;
+  z-index: 9;
+  left: 0px;
+}
+/* .phot img {
+  border-radius: 50%;
+  width: 13px;
+  height: 13px;
+  border: 1px solid white;
+  opacity: 0.8;
+} */
+/* .phot img:not(:nth-child(1)) {
+  margin-left: -0.6rem;
+} */
