--- a/src/styles/Album.module.css
+++ b/src/styles/Album.module.css
@@ -15,6 +15,167 @@
 }
 .background {
   position: absolute;
-  background: url('/public/background.png');
+  /* background: url('/public/background.png'); */
   left: 0px;
+}
+.pic {
+  position: absolute;
+  left: 97px;
+  top: 96px;
+
+  border-radius: 35.1703px;
+}
+.acontainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 9px;
+
+  position: absolute;
+  width: 527px;
+  height: 112px;
+  left: 408px;
+  top: 189px;
+}
+.h2 {
+  width: 302px;
+  height: 42px;
+
+  /* Bold/35px */
+
+  font-family: 'Quicksand';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 35px;
+  line-height: 120%;
+  /* identical to box height, or 42px */
+
+  color: #a4c7c6;
+}
+.p {
+  width: 507px;
+  height: 34px;
+  font-family: 'Quicksand';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 120%;
+  overflow-wrap: break-word;
+  /* or 17px */
+
+  /* light */
+
+  color: #efeee0;
+}
+.atimeline {
+  width: 116px;
+  height: 17px;
+
+  /* Regular/14px */
+
+  font-family: 'Quicksand';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 120%;
+  /* identical to box height, or 17px */
+
+  /* light */
+
+  color: #efeee0;
+}
+.abutton {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 9px;
+
+  position: absolute;
+  width: 292px;
+  height: 36px;
+  left: 408px;
+  top: 341px;
+  /* background: red; */
+}
+.abutton1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+
+  width: 87px;
+  height: 36px;
+
+  background: rgba(255, 255, 255, 0.07);
+  backdrop-filter: blur(5px);
+  /* Note: backdrop-filter has minimal browser support */
+
+  border-radius: 32px;
+}
+.abutton2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+
+  width: 151px;
+  height: 36px;
+
+  background: rgba(255, 255, 255, 0.07);
+  backdrop-filter: blur(5px);
+  /* Note: backdrop-filter has minimal browser support */
+
+  border-radius: 32px;
+}
+.abutton3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+
+  width: 36px;
+  height: 36px;
+
+  background: rgba(255, 255, 255, 0.07);
+  backdrop-filter: blur(5px);
+  /* Note: backdrop-filter has minimal browser support */
+
+  border-radius: 32px;
+}
+.abutton1i {
+  width: 41px;
+  height: 14px;
+
+  /* Regular/12px */
+
+  font-family: 'Quicksand';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 120%;
+  /* or 14px */
+
+  color: #ffffff;
+}
+.abutton2i {
+  width: 93px;
+  height: 14px;
+
+  /* Regular/12px */
+
+  font-family: 'Quicksand';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 120%;
+  /* or 14px */
+
+  color: #ffffff;
 }
