--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,5 +24,8 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-    overflow: hidden;
+  overflow: hidden;
+}
+button {
+  cursor: pointer;
 }
