--- a/src/styles/Album.module.css
+++ b/src/styles/Album.module.css
@@ -179,3 +179,27 @@
 
   color: #ffffff;
 }
+.music_container {
+  position: absolute;
+  width: 1125px;
+  height: 350px;
+  left: 96px;
+  top: 434px;
+
+  /* Note: backdrop-filter has minimal browser support */
+}
+.music_inside {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  width: 1125px;
+  height: 56px;
+  margin-top: 10px;
+  left: 0px;
+  top: 0px;
+  background: rgba(51, 55, 59, 0.37);
+  backdrop-filter: blur(5px);
+  /* Note: backdrop-filter has minimal browser support */
+
+  border-radius: 15px;
+}
