--- a/src/styles/Collections.module.css
+++ b/src/styles/Collections.module.css
@@ -80,7 +80,7 @@
   height: 234px;
   left: 96px;
   top: 156px;
-  background: red;
+  background: inherit;
   border-radius: 25px;
 }
 .containeritems {
@@ -91,14 +91,22 @@
   border-radius: 20px;
 
   margin-right: 20px;
-
+  transition:2s;
 }
+.containeritems:hover {
+  transform:scale(1.3);
+  z-index:2;
+}
+
 .containerpic {
   position: relative;
   position: relative;
   border-radius: 20px;
   margin-left: 10px;
+  /* transition: 1s; */
 }
+
+
 .containertitle {
   position: relative;
   width: 65px;
@@ -117,6 +125,8 @@
   /* light */
 
   color: white;
+  transform:scale(1.3);
+  z-index: 2;
 }
 .containersub_title {
   position: relative;
