--- a/src/styles/Collections.module.css
+++ b/src/styles/Collections.module.css
@@ -1,3 +1,6 @@
+.body{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 .container {
   position: absolute;
   width: 100vw;
@@ -25,7 +28,7 @@
 
   /* Regular/14px */
 
-  font-family: "Quicksand";
+  /* /*font-family: "Quicksand";*/ 
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -57,7 +60,7 @@
 
   /* Regular/14px */
 
-  font-family: "Quicksand";
+  /*font-family: "Quicksand";*/
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -115,7 +118,7 @@
   left: 19px;
   /* Regular/24px */
 
-  font-family: "Quicksand";
+  /*font-family: "Quicksand";*/
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
@@ -137,7 +140,7 @@
   left: 20px;
   /* Regular/24px */
 
-  font-family: "Quicksand";
+  /*font-family: "Quicksand";*/
   font-style: normal;
   font-weight: 400;
   font-size: 10px;
@@ -218,7 +221,7 @@
   left: 65px;
   padding-left: 9px;
   background-color: inherit;
-  font-family: "Quicksand";
+  /*font-family: "Quicksand";*/
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
