--- a/src/styles/Collections.module.css
+++ b/src/styles/Collections.module.css
@@ -1,5 +1,5 @@
-.body{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 .container {
   position: absolute;
@@ -28,7 +28,7 @@
 
   /* Regular/14px */
 
-  /* /*font-family: "Quicksand";*/ 
+  /* /*font-family: "Quicksand";*/
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -94,11 +94,11 @@
   border-radius: 20px;
 
   margin-right: 20px;
-  transition:2s;
+  transition: 2s;
 }
 .containeritems:hover {
-  transform:scale(1.3);
-  z-index:2;
+  transform: scale(1.3);
+  z-index: 2;
 }
 
 .containerpic {
@@ -108,7 +108,6 @@
   margin-left: 10px;
   /* transition: 1s; */
 }
-
 
 .containertitle {
   position: relative;
@@ -128,7 +127,7 @@
   /* light */
 
   color: white;
-  transform:scale(1.3);
+  transform: scale(1.3);
   z-index: 2;
 }
 .containersub_title {
@@ -272,7 +271,7 @@
 .footer {
   position: absolute;
   width: inherit;
-  height: 125px;
+  height:125px;
   /* left: -5px; */
   /* top: 852px; */
   bottom: 0px;
