--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,9 +7,10 @@
 }
 .home {
   position: relative;
-  padding-left: 50px;
+  /* padding-left: 100px; */
   width: 1280px;
-  height: 1100px;
+  height: 100vh;
+  left: 50px;
   /* overflow: auto; */
   background: #1d2123;
 }
@@ -97,16 +98,7 @@
   background: #090a0a;
   border-radius: 32px;
 }
-.footer {
-  position: absolute;
-  width: inherit;
-  height: 125px;
-  /* left: -5px; */
-  /* top: 852px; */
-  bottom: 0px;
-  background-color: inherit;
-  filter: drop-shadow(0px -25px 100px rgba(16, 16, 16, 0.51));
-}
+
 .smenu {
   position: absolute;
   left: 38.27;
