updated the audio part

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,8 +18,8 @@ button {
 }
 /* ---------- */
 .btnContainer {
-  /* left: 516px; */
-  /* top: 25px; */
+  left: 516px;
+  top: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
