--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -3,7 +3,8 @@
   width: 1280px;
   height: 125px;
   left: 50px;
-  top: 762px;
+  /* top: 630px; */
+  bottom: 0px;
 
   background: rgba(51, 55, 59, 0.37);
   backdrop-filter: blur(5px);
@@ -134,6 +135,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   pointer-events: none;
+  z-index: 1;
 }
 /* custom progress bar */
 .f_sliderCover {
@@ -197,4 +199,16 @@
   transform: translate(0%, -50%);
   pointer-events: none; /* Remove pointer events on thumb so user can click on the actual thumb beaneath it!  */
   user-select: none; /*  Prevent Accidentally highlighting the number while sliding the cursor  */
+}
+
+.btnContainer {
+  position: relative;
+  top: -25px;
+  left: 632px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  flex-grow: 1;
 }
