--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -3,7 +3,8 @@
   width: 1280px;
   height: 125px;
   left: 50px;
-  top: 762px;
+  /* top: 800px; */
+  bottom: 0px;
 
   background: rgba(51, 55, 59, 0.37);
   backdrop-filter: blur(5px);
@@ -24,7 +25,7 @@
 
   /* Bold/14px */
 
-  font-family: 'Quicksand';
+  font-family: "Quicksand";
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
@@ -40,7 +41,7 @@
 
   /* Bold/10px */
 
-  font-family: 'Quicksand';
+  font-family: "Quicksand";
   font-style: normal;
   font-weight: 700;
   font-size: 10px;
@@ -69,8 +70,8 @@
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
 }
 /* end of volume */
 .f_volumebutton {
@@ -123,7 +124,7 @@
 
 /* background */
 .f_slider::before {
-  content: '';
+  content: "";
   background-color: white;
   width: 99%;
   height: calc(var(--progress-bar-height) - 1px);
