--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,15 +32,18 @@ button {
   width: 0;
   height: 0;
   border-style: solid;
-  border-width: 20px 0 20px 30px;
-  border-color: transparent transparent transparent #ffffff;
+  border-width: 10px 0 10px 20px;
+  border-color: transparent transparent transparent #0e0d0d;
   cursor: pointer;
 }
 
 .btn_stop {
-  height: 40px;
-  width: 30px;
-  border-left: 10px solid rgb(255, 255, 255);
-  border-right: 10px solid rgb(255, 255, 255);
+  height: 20px;
+  width: 15px;
+  border-left: 10px solid rgb(24, 23, 23);
+  border-right: 10px solid rgb(26, 24, 24);
   cursor: pointer;
 }
+
+
+
