--- a/src/styles/Collections.module.css
+++ b/src/styles/Collections.module.css
@@ -94,7 +94,7 @@
   border-radius: 20px;
 
   margin-right: 20px;
-  transition: 2s;
+  /* transition: 2s; */
 }
 .containeritems:hover {
   transform: scale(1.3);
@@ -106,7 +106,10 @@
   position: relative;
   border-radius: 20px;
   margin-left: 10px;
-  /* transition: 1s; */
+}
+.containerpic:hover {
+  transform: scale(1.1);
+  transition: 3s;
 }
 
 .containertitle {
