--- a/src/styles/Album.module.css
+++ b/src/styles/Album.module.css
@@ -265,15 +265,7 @@
   margin-left: 150px;
 }
 @media screen and (max-width: 414px) {
-  .container {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    align-items: center;
-    background: black;
-  }
   .album {
-    position: relative;
     width: 414px;
     height: 896px;
 
@@ -283,5 +275,153 @@
   }
   .background {
     display: none;
+  }
+  .pic {
+    width: 307px;
+    height: 289px;
+    left: 27px;
+    top: 96px;
+  }
+  .acontainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 9px;
+
+    position: absolute;
+    width: 362px;
+    height: 112px;
+    left: 27px;
+    top: 410px;
+  }
+  .h2 {
+    width: 302px;
+    height: 42px;
+    /* Bold/35px */
+
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 120%;
+    /* identical to box height, or 42px */
+
+    color: #a4c7c6;
+  }
+  .p {
+    width: 362px;
+    height: 34px;
+
+    /* Regular/14px */
+
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 120%;
+    /* or 17px */
+
+    /* light */
+
+    color: #efeee0;
+  }
+  .atimeline {
+    width: 116px;
+    height: 17px;
+    /* Regular/14px */
+
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 120%;
+    /* identical to box height, or 17px */
+
+    /* light */
+
+    color: #efeee0;
+  }
+  .background {
+    display: none;
+  }
+  .abutton {
+    width: 356px;
+    height: 36px;
+    left: 28px;
+    top: 547px;
+  }
+  .music_container {
+    left: 30px;
+    top: 608px;
+    width: 354px;
+    height: 265px;
+    background: inherit;
+  }
+  .music_inside {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    width: 354px;
+    height: 56px;
+    margin-top: 6px;
+  }
+
+  .inside {
+    padding: 0px;
+    gap: 11px;
+  }
+  .inside1 {
+    position: relative;
+    left: 19px;
+  }
+  .inside2 {
+    margin-left: 10px;
+  }
+  .inside3 {
+    width: 128px;
+    height: 14px;
+    margin-left: 82.24px;
+    /* Regular/12px */
+    color: #ffffff;
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 120%;
+  }
+  .inside4 {
+    width: 128px;
+    height: 14px;
+    margin-left: 152px;
+    /* Regular/12px */
+    color: #ffffff;
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 120%;
+  }
+  .inside5 {
+    width: 20px;
+    height: 14px;
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 120%;
+    margin-left: 146px;
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 120%;
+    /* or 14px */
+
+    color: #ffffff;
+
+    /* Regular/12px */
+  }
+  .inside_icon {
+    margin-left: 150px;
   }
 }
