--- a/src/styles/Album.module.css
+++ b/src/styles/Album.module.css
@@ -264,10 +264,15 @@
 .inside_icon {
   margin-left: 150px;
 }
-@media screen and (max-width: 414px) {
-  .album {
-    width: 414px;
+@media screen and (max-width: 600px) {
+  .container {
+    width: 100vw;
     height: 896px;
+  }
+  .album {
+    width: 600px;
+    height: 896px;
+    bottom: 0px;
 
     /* dark */
 
@@ -342,9 +347,9 @@
 
     color: #efeee0;
   }
-  .background {
+  /* .background {
     display: none;
-  }
+  } */
   .abutton {
     width: 356px;
     height: 36px;
@@ -357,6 +362,7 @@
     width: 354px;
     height: 265px;
     background: inherit;
+    overflow: auto;
   }
   .music_inside {
     display: grid;
@@ -367,22 +373,41 @@
   }
 
   .inside {
-    padding: 0px;
-    gap: 11px;
+    display: flex;
+    gap: 1px;
+  }
+  .inside00 {
+    left: 9px;
+    width: 41px;
+    height: auto;
+  }
+  .inside0 {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 130px;
+    height: 56px;
+  }
+  .inside01 {
+    display: flex;
+    flex-direction: column;
+    left: 325px;
+    width: 28px;
+    height: fit-content;
   }
   .inside1 {
-    position: relative;
-    left: 19px;
+    left: 9px;
+    width: 39px;
   }
   .inside2 {
-    margin-left: 10px;
+    display: none;
   }
   .inside3 {
     width: 128px;
     height: 14px;
-    margin-left: 82.24px;
+    top: 31px;
+    left: 0px;
     /* Regular/12px */
-    color: #ffffff;
     font-family: 'Quicksand';
     font-style: normal;
     font-weight: 400;
@@ -390,9 +415,10 @@
     line-height: 120%;
   }
   .inside4 {
-    width: 128px;
-    height: 14px;
-    margin-left: 152px;
+    width: fit-content;
+    height: 12px;
+    left: 1px;
+    top: 31px;
     /* Regular/12px */
     color: #ffffff;
     font-family: 'Quicksand';
@@ -404,6 +430,8 @@
   .inside5 {
     width: 20px;
     height: 14px;
+    top: 33px;
+    /* left: 325px; */
     font-family: 'Quicksand';
     font-style: normal;
     font-weight: 400;
@@ -422,6 +450,197 @@
     /* Regular/12px */
   }
   .inside_icon {
-    margin-left: 150px;
+    /* left: 332px; */
+    top: 11px;
+  }
+}
+@media screen and (max-width: 414px) {
+  .container {
+    width: 100vw;
+    height: 896px;
+  }
+  .album {
+    width: 414px;
+    height: 896px;
+    bottom: 0px;
+
+    /* dark */
+
+    background: #1d2123;
+  }
+  .background {
+    display: none;
+  }
+  .pic {
+    width: 307px;
+    height: 289px;
+    left: 27px;
+    top: 96px;
+  }
+  .acontainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 9px;
+
+    position: absolute;
+    width: 362px;
+    height: 112px;
+    left: 27px;
+    top: 410px;
+  }
+  .h2 {
+    width: 302px;
+    height: 42px;
+    /* Bold/35px */
+
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 120%;
+    /* identical to box height, or 42px */
+
+    color: #a4c7c6;
+  }
+  .p {
+    width: 362px;
+    height: 34px;
+
+    /* Regular/14px */
+
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 120%;
+    /* or 17px */
+
+    /* light */
+
+    color: #efeee0;
+  }
+  .atimeline {
+    width: 116px;
+    height: 17px;
+    /* Regular/14px */
+
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 120%;
+    /* identical to box height, or 17px */
+
+    /* light */
+
+    color: #efeee0;
+  }
+  /* .background {
+    display: none;
+  } */
+  .abutton {
+    width: 356px;
+    height: 36px;
+    left: 28px;
+    top: 547px;
+  }
+  .music_container {
+    left: 30px;
+    top: 608px;
+    width: 354px;
+    height: 265px;
+    background: inherit;
+    overflow-y: scroll;
+  }
+  .music_inside {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    width: 354px;
+    height: 56px;
+    margin-top: 6px;
+  }
+
+  .inside {
+    display: flex;
+    gap: 1px;
+  }
+  .inside00 {
+    left: 9px;
+    width: 41px;
+    height: auto;
+  }
+  .inside0 {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 130px;
+    height: 56px;
+  }
+  .inside01 {
+    display: flex;
+    flex-direction: column;
+    left: 325px;
+    width: 28px;
+    height: fit-content;
+  }
+  .inside1 {
+    left: 9px;
+    width: 39px;
+  }
+  .inside2 {
+    display: none;
+  }
+  .inside3 {
+    width: 128px;
+    height: 14px;
+    top: 31px;
+    left: 0px;
+    /* Regular/12px */
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 120%;
+  }
+  .inside4 {
+    width: fit-content;
+    height: 12px;
+    left: 1px;
+    top: 31px;
+    /* Regular/12px */
+    color: #ffffff;
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 120%;
+  }
+  .inside5 {
+    width: 20px;
+    height: 14px;
+    top: 33px;
+    /* left: 325px; */
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 120%;
+    margin-left: 146px;
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 120%;
+    /* or 14px */
+
+    color: #ffffff;
+
+    /* Regular/12px */
+  }
+  .inside_icon {
+    /* left: 332px; */
+    top: 11px;
   }
 }
